--- a/src/scss/utils/_styles.scss
+++ b/src/scss/utils/_styles.scss
@@ -1,23 +1,27 @@
+.wrapper{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    align-items:center; }
 .grid { 
     display:grid; 
     grid-auto-flow:column;
 }
 .img { 
     max-width:100%; 
+    max-height:100%;
     object-fit: cover;
     object-position:center; }
-.img.fit {
+.fit {
     height:100%;
     width:100%; }
 
-.img.fit-h { 
+.fit-h { 
     height:100%;    }
 
-.img.fit-w { 
+.fit-w { 
     width:100%; }
 
-.wrapper{
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-    align-items:center; }
+.pill {
+    border-radius:35% 50% 20% 20%/ 35% 50% 20% 20% ;
+}
