--- a/src/scss/_color-theme.scss
+++ b/src/scss/_color-theme.scss
@@ -1,10 +1,20 @@
+@import 'utils/color-vars';
+
 @mixin colorTheme {
-  body {
-    background-color:white;
-    header { background-color:#CF4647; }
-    nav { background-color: lightgreen;}
-    section { background-color: lightgreen;}
-    footer { background-color: lightsalmon;}
-    article { background-color: lightblue }
-  }
+    body {
+        @include getColorTheme;
+        background-color:#222;
+        color:var(--text);
+        .header {
+            background-color:var(--primary);
+        }    
+    }
+    .btn {
+        --btn-c:var(--text);
+       --btn-bg-c:var(--primary);
+    }
+    input.search { 
+        background-color:var(--text); 
+        color:var(--secondary);
+    }
 }
