--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,24 +1,25 @@
 @mixin button{
-    .btn {
-        &:hover {
-            opacity:.8; }
-            
-        padding: 0.375rem 0.75rem;
-        font-size: 0.9375rem;
-        line-height: 1.5;
-        border-radius: 0.25rem;
-        display: inline-block;
-
-        color:var(--btn-c,inherit);
-        background-color:var(--btn-bg-c, transparent);
-        border: 1px solid transparent;
+    &:hover { opacity:.8; }
         
-        font-weight: 400;
-        text-align: center;
-        vertical-align: middle;
+    display: inline-block;
+    
+    padding: 0.375rem 0.75rem;
+    
+    font-size: 0.9375rem;
+    line-height: 1.5;
+    
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
 
-        cursor:pointer;
+    border-radius: 0.25rem;
+    border: 1px solid transparent;
+    color:var(--btn-c,inherit);
+    background-color:var(--btn-bg-c, transparent);
 
-        @content;
-    }
+    cursor:pointer;
+
+    @content;
 }
+.btn {
+    @include button;   }
