--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,17 +3,15 @@
 @import 'color-theme';
 @import 'components';
 @import 'typography';
-@import 'fontawesome.scss'; //*! import fontawesome if desired!
 
-
-// *! First set the Fontawesome path
-$fa-font-path: '../assets/fontawesome/';  
+// * Enabling Fontawesome  * //
+@import 'fontawesome'; //*todo See README.md in scss folder
+@import "fontawesome/brands"; 
 
 // *? utils ** //
-@include hard-reset; // ** from reset
-//@include wrapper; // ** from mixins
+@include hard-reset; // ** from utils/reset 
 
-//  *? components ** //
+//  *? components ** // 
 @include components;
 
 // *? page layout ** // 
@@ -24,4 +22,4 @@ $fa-font-path: '../assets/fontawesome/';
 @include colorTheme;
 
 // *? margins and typography ** //
-@include typography; // *! include margins and paddings...
+@include typography;
